[lworld] C2 compilation fails with assert(!t->is_flat() && !t->is_not_flat()) failed: Should have been optimized out

XMLWordPrintable

      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/macro.cpp:2926), pid=586656, tid=586669
      # assert(!t->is_flat() && !t->is_not_flat()) failed: Should have been optimized out

      Current CompileTask:
      C2: 665 32 b 4 java.util.concurrent.LinkedTransferQueue$LTQSpliterator::trySplit (153 bytes)

      Stack: [0x00007f2114c35000,0x00007f2114d36000], sp=0x00007f2114d31470, free space=1009k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x13af7c3] PhaseMacroExpand::expand_flatarraycheck_node(FlatArrayCheckNode*)+0x103
      V [libjvm.so+0x13b8034] PhaseMacroExpand::expand_macro_nodes()+0xd44
      V [libjvm.so+0xa27150] Compile::Optimize()+0x1800
      V [libjvm.so+0xa28ee8] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1ab8
      V [libjvm.so+0x8528fc] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
      V [libjvm.so+0xa38d90] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xca0
      V [libjvm.so+0xa39898] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x191e2a6] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1924f60] Thread::call_run()+0x100
      V [libjvm.so+0x15efff6] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: