8256329: [lworld] C2 compilation fails with assert(>is_flat() && >is_not_flat()) failed: Should have been optimized out